tests/NormalTests/paczka1/small_fuzzy/69308873.err
Error in line 5: S412 S412 75,7
Error in line 8: U6mN4 S211 61,6
